<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/judulBesar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/judulBesar"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="60dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/judulBesar"
                    android:layout_marginTop="-30dp"
                    android:text="@string/tagLine"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/gambarBumiMobil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/judulBesar"
                    android:layout_marginTop="-10dp"
                    android:src="@drawable/bumi" />

                <TextView
                    android:id="@+id/butuhMobil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gambarBumiMobil"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/permanentmarker_regular"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/keterangan1"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ayosewa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/butuhMobil"
                    android:fontFamily="@font/permanentmarker_regular"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/keterangan2"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/kamubisa"
                    android:text="@string/pengertian"
                    android:layout_below="@id/ayosewa"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/buttonLanjut"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-5dp"
            android:layout_marginBottom="-8dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/permanentmarker_regular"
            android:onClick="pindahDashboard"
            android:text="Let's Go"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>