<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Form">

    <ImageView
        android:layout_width="@dimen/bulat"
        android:layout_height="@dimen/bulat"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="-100dp"
        android:src="@drawable/bulat" />

    <ImageView
        android:layout_width="@dimen/bulat"
        android:layout_height="@dimen/bulat"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-130dp"
        android:layout_marginBottom="-20dp"
        android:src="@drawable/bulat" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/judulBesar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:paddingStart="10dp">

                        <ImageView
                            android:id="@+id/back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-5dp"
                            android:layout_toEndOf="@id/back"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/form_penyewaan"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sebelahPanah" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="600dp"
                        android:layout_below="@id/judulBesar"
                        android:layout_marginStart="@dimen/tepi"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="@dimen/tepi"
                        android:background="@drawable/form"
                        android:elevation="20dp"
                        android:paddingStart="@dimen/tepi"
                        android:paddingTop="30dp"
                        android:paddingEnd="@dimen/tepi"
                        android:paddingBottom="@dimen/tepi">

                        <EditText
                            android:id="@+id/namaPenyewa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="@string/nama_penyewa"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="5dp" />

                        <EditText
                            android:id="@+id/NIK"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/namaPenyewa"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="@string/nik"
                            android:inputType="number"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="5dp" />

                        <EditText
                            android:id="@+id/alamat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/NIK"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="@string/alamat"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="5dp" />

                        <EditText
                            android:id="@+id/noWa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/alamat"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="15dp"
                            android:layout_toStartOf="@id/merkMobil"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="@string/no_wa"
                            android:inputType="number"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="5dp" />

                        <TextView
                            android:id="@+id/merkMobil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/alamat"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="5dp"
                            android:text="@string/merk_mobil"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/hargaSewa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/noWa"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="5dp"
                            android:text="@string/harga_sewa"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/lamaSewa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/noWa"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="15dp"
                            android:layout_toEndOf="@id/hargaSewa"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="@string/lama_sewa"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="5dp" />

                        <EditText
                            android:id="@+id/tanggalSewa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/lamaSewa"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="Tanggal Mulai Sewa"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tanggalSewa"
                            android:text="Ex : 2022-12-31"
                            android:layout_marginTop="5dp"
                            android:id="@+id/contoh"
                            android:fontFamily="@font/poppins_medium"
                            android:layout_marginStart="10dp"
                            />

                        <EditText
                            android:id="@+id/uangPembayaran"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/contoh"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/fill_form"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="Uang Pembayaran"
                            android:inputType="number"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="5dp" />

                        <Button
                            android:id="@+id/sewa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/uangPembayaran"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/button_sewa"
                            android:elevation="@dimen/tepi"
                            android:fontFamily="@font/poppins_medium"
                            android:text="s e w a"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/sewa"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/border_radius"
                            android:elevation="@dimen/tepi"
                            android:fontFamily="@font/poppins_medium"
                            android:text="c a n c e l"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>